[gd_scene load_steps=7 format=2]

[ext_resource path="res://obstacles/dinosaur/dinosaur.png" type="Texture" id=1]
[ext_resource path="res://obstacles/dinosaur/dinosaur.gd" type="Script" id=2]
[ext_resource path="res://obstacles/dinosaur/sfx_dinosaur-shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://obstacles/stunner.tscn" type="PackedScene" id=4]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[node name="Dinosaur" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpikeSpawnPosition" type="Position2D" parent="."]
position = Vector2( -8, 0 )

[node name="FireRate" type="Timer" parent="."]
one_shot = true

[node name="SFXShoot" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 1 )
volume_db = -2.0
max_distance = 150.0

[node name="Stunner" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Stunner" index="0"]
shape = SubResource( 2 )

[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]

[editable path="Stunner"]
